correccion de errores de seguridad